src/main/java/com/cn/emio/sl/lblue/test/error/GlobalDefaultExceptionHandler.java
package com.cn.emio.sl.lblue.test.error;

import javax.servlet.http.HttpServletRequest;

import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.ResponseBody;

@ControllerAdvice(basePackages = { "com.cn.emio.sl.lblue.test" })
/**
 * @author Silence_Lurker
 */
public class GlobalDefaultExceptionHandler {
    @ExceptionHandler({ BusinessException.class })
    @ResponseBody
    public ErrorInfo defaultErrorHandler(HttpServletRequest req, Exception e) throws Exception {
        ErrorInfo errorInfo = new ErrorInfo();
        errorInfo.setMessage(e.getMessage());
        errorInfo.setUrl(req.getRequestURI());
        errorInfo.setCode(ErrorInfo.SUCCESS);
        return errorInfo;
    }
}
